# aiogram-telegram-bot-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README.rst  alembic.ini  loggers.py  logging.conf.json  main.py  manage.py  pyproject.toml
bot/: exceptions.py  filters.py  middlewares.py
bot/handlers/: __init__.py  hooks.py  web.py
bot/handlers/channel/: __init__.py  messages.py
bot/handlers/group/: __init__.py  callback_query.py  inlne_query.py  messages.py  service_messages.py
bot/handlers/private/: __init__.py  callback_query.py  inlne_query.py  messages.py
bot/keyboards/: button_text.py
bot/utils/: bot.py  malling_messages.py  throttling.py
config/: settings.py
db/: utils.py
db/migrations/: env.py
db/models/: base.py  telegram.py
