[tool.poetry]
name = "aiogram-telegram-bot-template"
version = "0.1.0"
description = ""
authors = ["veenrokdalv  <veenrokdalv@gmail.com>"]
readme = "README.md"
packages = [{include = "aiogram_telegram_bot_template"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip"}
python-environ = "^0.4.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
