[tool.poetry]
name = "aiogram-telegram-bot-template"
version = "0.1.0"
description = ""
authors = ["veenrokdalv  <veenrokdalv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip"}
python-environ = "^0.4.54"
cachetools = "^5.2.0"
pytimeparse = "^1.1.8"
babel = "^2.11.0"
aioredis = "^2.0.1"
redis = "^4.3.5"
sqlalchemy = "2.0.0b3"
asyncpg = "^0.27.0"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.5"


[tool.poetry.group.dev.dependencies]
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
